# Game

./: .gitignore  CMakeLists.txt
include/: common.hpp  gamemanager.hpp  randomengine.hpp  srandengine.hpp
src/: gamemanager.cpp  main.cpp  randomengine.cpp  srandengine.cpp
tests/: gamemanager_tests.cpp  randomengine_tests.cpp  srandengine_tests.cpp
